portfolio hover is hard to read. fixes #36

--- a/themes/escoladejornalismo/static/css/enois.less
+++ b/themes/escoladejornalismo/static/css/enois.less
@@ -900,7 +900,7 @@ body {
 }
 .thumb-portfolio:hover > div {
   display: block;
-  background:rgba(255,255,255, 0.5);
+  background: rgba(255, 255, 255, 0.85);
 
 }
 .thumb-portfolio h2 {
